# logging-effect-fluentd

./: README.md  logging-effect-fluentd.cabal  stack.yaml
src/Control/Monad/Log/: Fluentd.hs
