name:                logging-effect-fluentd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/unfoldml/logging-effect-fluentd
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          oss@unfoldml.com
copyright:           2021 UnfoldML AB
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , exceptions
                     , http-client
                     , http-client-tls
                     , logging-effect
                     , msgpack-binary
                     , msgpack-types
                     , req


test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , logging-effect-fluentd
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/unfoldml/logging-effect-fluentd
